--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "node": "6.11.1"
   },
   "dependencies": {
-    "base-64": "0.1.0",
-    "body-parser": "~1.15.2",
-    "collections": "5.0.5",
-    "cookie-parser": "~1.4.3",
+    "async": "^2.1.4",
+    "base-64": "^0.1.0",
+    "body-parser": "^1.18.1",
+    "collections": "^5.0.7",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
-    "express": "~4.14.0",
-    "hbs": "~4.0.0",
+    "express": "^4.15.4",
+    "hbs": "^4.0.1",
     "localStorage": "^1.0.3",
-    "moment": "2.17.0",
-    "morgan": "~1.7.0",
-    "pg": "6.1.0",
-    "serve-favicon": "~2.3.0",
-    "store": "1.3.20",
-    "utf8": "2.1.2",
+    "moment": "^2.18.1",
+    "morgan": "^1.8.2",
+    "pg": "^6.4.2",
+    "serve-favicon": "^2.4.4",
+    "store": "^1.3.20",
+    "utf8": "^2.1.2",
     "util": "^0.10.3",
-    "winston": "2.3.0"
+    "winston": "^2.3.1"
   }
 }
