--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "pg": "^6.4.2",
     "serve-favicon": "^2.4.4",
     "store": "^1.3.20",
+    "uniqid": "^4.1.0",
     "utf8": "^2.1.2",
     "util": "^0.10.3",
+    "uuid": "3.1.0",
     "winston": "^2.3.1"
   }
 }
