--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": "6.11.1"
   },
   "dependencies": {
-    "async": "^2.1.4",
+    "async": "^2.5.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.18.1",
     "collections": "^5.0.7",
@@ -23,10 +23,10 @@
     "pg": "^6.4.2",
     "serve-favicon": "^2.4.4",
     "store": "^1.3.20",
-    "uniqid": "^4.1.0",
+    "uniqid": "^4.1.1",
     "utf8": "^2.1.2",
     "util": "^0.10.3",
-    "uuid": "3.1.0",
+    "uuid": "^3.1.0",
     "winston": "^2.3.1"
   }
 }
